syntax = "proto3";

package linkflow.history.v1;

option go_package = "github.com/linkflow/engine/gen/proto/linkflow/history/v1;historyv1";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "linkflow/common/v1/enums.proto";
import "linkflow/common/v1/message.proto";
import "linkflow/api/v1/workflow.proto";

// HistoryEvent represents a single event in the workflow history.
message HistoryEvent {
  int64 event_id = 1;
  google.protobuf.Timestamp event_time = 2;
  linkflow.common.v1.EventType event_type = 3;
  int64 version = 4;
  int64 task_id = 5;

  oneof attributes {
    ExecutionStartedEventAttributes execution_started_attributes = 10;
    ExecutionCompletedEventAttributes execution_completed_attributes = 11;
    ExecutionFailedEventAttributes execution_failed_attributes = 12;
    ExecutionTimedOutEventAttributes execution_timed_out_attributes = 13;
    ExecutionCancelledEventAttributes execution_cancelled_attributes = 14;
    ExecutionTerminatedEventAttributes execution_terminated_attributes = 15;
    ExecutionContinuedAsNewEventAttributes execution_continued_as_new_attributes = 16;
    NodeScheduledEventAttributes node_scheduled_attributes = 20;
    NodeStartedEventAttributes node_started_attributes = 21;
    NodeCompletedEventAttributes node_completed_attributes = 22;
    NodeFailedEventAttributes node_failed_attributes = 23;
    NodeTimedOutEventAttributes node_timed_out_attributes = 24;
    NodeCancelledEventAttributes node_cancelled_attributes = 25;
    TimerStartedEventAttributes timer_started_attributes = 30;
    TimerFiredEventAttributes timer_fired_attributes = 31;
    TimerCancelledEventAttributes timer_cancelled_attributes = 32;
    SignalReceivedEventAttributes signal_received_attributes = 40;
    WorkflowTaskScheduledEventAttributes workflow_task_scheduled_attributes = 50;
    WorkflowTaskStartedEventAttributes workflow_task_started_attributes = 51;
    WorkflowTaskCompletedEventAttributes workflow_task_completed_attributes = 52;
    WorkflowTaskFailedEventAttributes workflow_task_failed_attributes = 53;
    WorkflowTaskTimedOutEventAttributes workflow_task_timed_out_attributes = 54;
  }
}

// History contains a list of history events.
message History {
  repeated HistoryEvent events = 1;
}

// ExecutionStartedEventAttributes contains attributes for execution started event.
message ExecutionStartedEventAttributes {
  linkflow.api.v1.WorkflowType workflow_type = 1;
  string parent_workflow_id = 2;
  string parent_run_id = 3;
  linkflow.api.v1.TaskQueue task_queue = 4;
  linkflow.common.v1.Payloads input = 5;
  google.protobuf.Duration execution_timeout = 6;
  google.protobuf.Duration run_timeout = 7;
  google.protobuf.Duration task_timeout = 8;
  string continued_run_id = 9;
  string initiator = 10;
  linkflow.common.v1.Failure continued_failure = 11;
  linkflow.common.v1.Payloads last_completion_result = 12;
  string original_run_id = 13;
  string identity = 14;
  string first_run_id = 15;
  linkflow.common.v1.RetryPolicy retry_policy = 16;
  int32 attempt = 17;
  google.protobuf.Timestamp expiration_time = 18;
  string cron_schedule = 19;
  int64 first_scheduled_event_id = 20;
  linkflow.common.v1.Memo memo = 21;
  linkflow.common.v1.SearchAttributes search_attributes = 22;
  linkflow.common.v1.Header header = 23;
}

// ExecutionCompletedEventAttributes contains attributes for execution completed event.
message ExecutionCompletedEventAttributes {
  linkflow.common.v1.Payloads result = 1;
  int64 completed_event_id = 2;
  string new_run_id = 3;
}

// ExecutionFailedEventAttributes contains attributes for execution failed event.
message ExecutionFailedEventAttributes {
  linkflow.common.v1.Failure failure = 1;
  linkflow.common.v1.RetryPolicy retry_policy = 2;
  string new_run_id = 3;
}

// ExecutionTimedOutEventAttributes contains attributes for execution timed out event.
message ExecutionTimedOutEventAttributes {
  linkflow.common.v1.RetryPolicy retry_policy = 1;
  string new_run_id = 2;
}

// ExecutionCancelledEventAttributes contains attributes for execution cancelled event.
message ExecutionCancelledEventAttributes {
  int64 scheduled_event_id = 1;
  linkflow.common.v1.Payloads details = 2;
}

// ExecutionTerminatedEventAttributes contains attributes for execution terminated event.
message ExecutionTerminatedEventAttributes {
  string reason = 1;
  linkflow.common.v1.Payloads details = 2;
  string identity = 3;
}

// ExecutionContinuedAsNewEventAttributes contains attributes for execution continued as new event.
message ExecutionContinuedAsNewEventAttributes {
  string new_run_id = 1;
  linkflow.api.v1.WorkflowType workflow_type = 2;
  linkflow.api.v1.TaskQueue task_queue = 3;
  linkflow.common.v1.Payloads input = 4;
  google.protobuf.Duration execution_timeout = 5;
  google.protobuf.Duration run_timeout = 6;
  google.protobuf.Duration task_timeout = 7;
  int64 completed_event_id = 8;
  linkflow.common.v1.Failure failure = 9;
  linkflow.common.v1.Payloads last_completion_result = 10;
  linkflow.common.v1.Header header = 11;
  linkflow.common.v1.Memo memo = 12;
  linkflow.common.v1.SearchAttributes search_attributes = 13;
}

// NodeScheduledEventAttributes contains attributes for node scheduled event.
message NodeScheduledEventAttributes {
  string node_id = 1;
  string node_type = 2;
  string name = 3;
  linkflow.api.v1.TaskQueue task_queue = 4;
  linkflow.common.v1.Payloads input = 5;
  google.protobuf.Duration schedule_to_start_timeout = 6;
  google.protobuf.Duration start_to_close_timeout = 7;
  google.protobuf.Duration schedule_to_close_timeout = 8;
  google.protobuf.Duration heartbeat_timeout = 9;
  linkflow.common.v1.RetryPolicy retry_policy = 10;
  linkflow.common.v1.Header header = 11;
}

// NodeStartedEventAttributes contains attributes for node started event.
message NodeStartedEventAttributes {
  int64 scheduled_event_id = 1;
  string identity = 2;
  string request_id = 3;
  int32 attempt = 4;
  linkflow.common.v1.Failure last_failure = 5;
}

// NodeCompletedEventAttributes contains attributes for node completed event.
message NodeCompletedEventAttributes {
  int64 scheduled_event_id = 1;
  int64 started_event_id = 2;
  linkflow.common.v1.Payloads result = 3;
  string identity = 4;
  linkflow.common.v1.Payloads logs = 5;
}

// NodeFailedEventAttributes contains attributes for node failed event.
message NodeFailedEventAttributes {
  int64 scheduled_event_id = 1;
  int64 started_event_id = 2;
  linkflow.common.v1.Failure failure = 3;
  string identity = 4;
  linkflow.common.v1.RetryPolicy retry_policy = 5;
  linkflow.common.v1.Payloads logs = 6;
}

// NodeTimedOutEventAttributes contains attributes for node timed out event.
message NodeTimedOutEventAttributes {
  int64 scheduled_event_id = 1;
  int64 started_event_id = 2;
  linkflow.common.v1.Failure failure = 3;
}

// NodeCancelledEventAttributes contains attributes for node cancelled event.
message NodeCancelledEventAttributes {
  int64 scheduled_event_id = 1;
  int64 started_event_id = 2;
  linkflow.common.v1.Payloads details = 3;
  string identity = 4;
}

// TimerStartedEventAttributes contains attributes for timer started event.
message TimerStartedEventAttributes {
  string timer_id = 1;
  google.protobuf.Duration start_to_fire_timeout = 2;
  int64 scheduled_event_id = 3;
}

// TimerFiredEventAttributes contains attributes for timer fired event.
message TimerFiredEventAttributes {
  string timer_id = 1;
  int64 started_event_id = 2;
}

// TimerCancelledEventAttributes contains attributes for timer cancelled event.
message TimerCancelledEventAttributes {
  string timer_id = 1;
  int64 started_event_id = 2;
  string identity = 3;
}

// SignalReceivedEventAttributes contains attributes for signal received event.
message SignalReceivedEventAttributes {
  string signal_name = 1;
  linkflow.common.v1.Payloads input = 2;
  string identity = 3;
  linkflow.common.v1.Header header = 4;
}

// WorkflowTaskScheduledEventAttributes contains attributes for workflow task scheduled event.
message WorkflowTaskScheduledEventAttributes {
  linkflow.api.v1.TaskQueue task_queue = 1;
  google.protobuf.Duration start_to_close_timeout = 2;
  int32 attempt = 3;
}

// WorkflowTaskStartedEventAttributes contains attributes for workflow task started event.
message WorkflowTaskStartedEventAttributes {
  int64 scheduled_event_id = 1;
  string identity = 2;
  string request_id = 3;
}

// WorkflowTaskCompletedEventAttributes contains attributes for workflow task completed event.
message WorkflowTaskCompletedEventAttributes {
  int64 scheduled_event_id = 1;
  int64 started_event_id = 2;
  string identity = 3;
  string binary_checksum = 4;
}

// WorkflowTaskFailedEventAttributes contains attributes for workflow task failed event.
message WorkflowTaskFailedEventAttributes {
  int64 scheduled_event_id = 1;
  int64 started_event_id = 2;
  string cause = 3;
  linkflow.common.v1.Failure failure = 4;
  string identity = 5;
  string binary_checksum = 6;
}

// WorkflowTaskTimedOutEventAttributes contains attributes for workflow task timed out event.
message WorkflowTaskTimedOutEventAttributes {
  int64 scheduled_event_id = 1;
  int64 started_event_id = 2;
  string timeout_type = 3;
}
